--- a/index.html
+++ b/index.html
@@ -1113,18 +1113,49 @@ body.avatar-overlay-open{overflow:hidden}
 <script id="dataScript" data-loader="data">
 const KEY='al_logs_data_version';
 window.AL_DATA_VERSION_KEY=KEY;
-let version='';
-try{ version=localStorage.getItem(KEY)||''; }
-catch(err){ version=''; }
-if(!version){
-  try{ version=sessionStorage.getItem(KEY)||''; }
-  catch(err){ version=''; }
+const COMMIT_KEY=`${KEY}__commit`;
+const COMMIT_META_KEY=`${KEY}__commit_meta`;
+window.AL_DATA_COMMIT_KEY=COMMIT_KEY;
+window.AL_DATA_COMMIT_META_KEY=COMMIT_META_KEY;
+const SHA_PATTERN=/^[0-9a-f]{40}$/i;
+let storedVersion='';
+try{ storedVersion=localStorage.getItem(KEY)||''; }
+catch(err){ storedVersion=''; }
+if(!storedVersion){
+  try{ storedVersion=sessionStorage.getItem(KEY)||''; }
+  catch(err){ storedVersion=''; }
+}
+let storedCommit='';
+try{ storedCommit=localStorage.getItem(COMMIT_KEY)||''; }
+catch(err){ storedCommit=''; }
+if(!storedCommit){
+  try{ storedCommit=sessionStorage.getItem(COMMIT_KEY)||''; }
+  catch(err){ storedCommit=''; }
+}
+let storedCommitMetaRaw='';
+try{ storedCommitMetaRaw=localStorage.getItem(COMMIT_META_KEY)||''; }
+catch(err){ storedCommitMetaRaw=''; }
+if(!storedCommitMetaRaw){
+  try{ storedCommitMetaRaw=sessionStorage.getItem(COMMIT_META_KEY)||''; }
+  catch(err){ storedCommitMetaRaw=''; }
+}
+const normalizedCommit=(storedCommit&&SHA_PATTERN.test(storedCommit.trim()))?storedCommit.trim():'';
+const initialCommitMeta=normalizeCommitMetadata(storedCommitMetaRaw,{ commitFallback:normalizedCommit });
+let commitFromMeta=initialCommitMeta&&initialCommitMeta.commit?initialCommitMeta.commit:'';
+const effectiveCommit=normalizedCommit||commitFromMeta||'';
+let version=normalizedCommit||storedVersion||'';
+if(!version && commitFromMeta){
+  version=commitFromMeta;
 }
 window.AL_DATA_VERSION=version;
+window.AL_DATA_STORED_VERSION=storedVersion||'';
+window.AL_DATA_COMMIT=SHA_PATTERN.test(effectiveCommit)?effectiveCommit:'';
+window.AL_DATA_COMMIT_META=initialCommitMeta;
 const cacheBust=String(Date.now());
 window.AL_DATA_CACHE_BUST=cacheBust;
 const scriptEl=document.getElementById('dataScript')||document.querySelector('script[data-loader="data"]');
 const DATA_FILE_PATH='/api/data-proxy';
+const DATA_FILE_FALLBACK_PATH='data/data.js';
 
 if(scriptEl&&version&&isLikelyGitObjectId(version)){
   scriptEl.setAttribute('data-ref',version);
@@ -1134,18 +1165,32 @@ const DATA_BOOT_DIAG=initBootstrapDiagnostics({
   key:KEY,
   version,
   cacheBust,
-  scriptEl
+  scriptEl,
+  storedVersion,
+  storedCommit:normalizedCommit,
+  storedCommitMeta:initialCommitMeta
 });
 
-function initBootstrapDiagnostics({key,version,cacheBust,scriptEl}){
+function initBootstrapDiagnostics({key,version,cacheBust,scriptEl,storedVersion='',storedCommit='',storedCommitMeta=null}){
   const hasWindow=typeof window!=='undefined';
   const diag={
     startedAt:safeIsoTimestamp(),
     initialVersion:version||'',
+    initialStoredVersion:storedVersion||'',
+    initialStoredCommit:storedCommit||'',
+    initialStoredCommitMeta:storedCommitMeta||null,
     cacheBustToken:cacheBust||'',
     stored:{
       local:hasWindow?readStorageSafe(()=>window.localStorage&&window.localStorage.getItem(key)):null,
-      session:hasWindow?readStorageSafe(()=>window.sessionStorage&&window.sessionStorage.getItem(key)):null
+      session:hasWindow?readStorageSafe(()=>window.sessionStorage&&window.sessionStorage.getItem(key)):null,
+      commit:{
+        local:hasWindow?readStorageSafe(()=>window.localStorage&&window.localStorage.getItem(window.AL_DATA_COMMIT_KEY||`${key}__commit`)):null,
+        session:hasWindow?readStorageSafe(()=>window.sessionStorage&&window.sessionStorage.getItem(window.AL_DATA_COMMIT_KEY||`${key}__commit`)):null
+      },
+      commitMeta:{
+        local:hasWindow?readStorageSafe(()=>window.localStorage&&window.localStorage.getItem(window.AL_DATA_COMMIT_META_KEY||`${key}__commit_meta`)):null,
+        session:hasWindow?readStorageSafe(()=>window.sessionStorage&&window.sessionStorage.getItem(window.AL_DATA_COMMIT_META_KEY||`${key}__commit_meta`)):null
+      }
     },
     script:{
       id:scriptEl?scriptEl.id||null:null,
@@ -1178,10 +1223,45 @@ function readStorageSafe(fn){
   }
 }
 
+function normalizeCommitMetadata(metadata,{commitFallback=''}={}){
+  if(metadata==null) return null;
+  let source=metadata;
+  if(typeof source==='string'){
+    if(!source.trim()) return null;
+    try{
+      source=JSON.parse(source);
+    }catch(err){
+      return null;
+    }
+  }
+  if(!source||typeof source!=='object') return null;
+  const commitCandidate=source.commit||commitFallback||'';
+  if(!commitCandidate||!SHA_PATTERN.test(String(commitCandidate).trim())) return null;
+  const normalizedCommit=String(commitCandidate).trim();
+  const normalized={ commit:normalizedCommit };
+  if(source.rawUrl && typeof source.rawUrl==='string' && source.rawUrl.trim()){
+    normalized.rawUrl=source.rawUrl.trim();
+  }
+  if(source.proxyUrl && typeof source.proxyUrl==='string' && source.proxyUrl.trim()){
+    normalized.proxyUrl=source.proxyUrl.trim();
+  }
+  if(source.path && typeof source.path==='string' && source.path.trim()){
+    normalized.path=source.path.trim();
+  }
+  if(Number.isFinite(source.savedAt)){
+    normalized.savedAt=Number(source.savedAt);
+  }
+  return normalized;
+}
+
 function clearStoredVersion(){
   try{ localStorage.removeItem(KEY); }
   catch(err){ /* no-op */ }
   try{ sessionStorage.removeItem(KEY); }
+  catch(err){ /* no-op */ }
+  try{ localStorage.removeItem(COMMIT_KEY); }
+  catch(err){ /* no-op */ }
+  try{ sessionStorage.removeItem(COMMIT_KEY); }
   catch(err){ /* no-op */ }
 }
 
@@ -1417,10 +1497,22 @@ const avatarPreviewImage=avatarOverlay?avatarOverlay.querySelector('.avatar-prev
 const avatarSizeCache=new Map();
 const dataScriptEl=document.getElementById('dataScript');
 const DATA_VERSION_KEY=window.AL_DATA_VERSION_KEY||'al_logs_data_version';
+const DATA_COMMIT_KEY=window.AL_DATA_COMMIT_KEY||`${DATA_VERSION_KEY}__commit`;
+const DATA_COMMIT_META_KEY=window.AL_DATA_COMMIT_META_KEY||`${DATA_VERSION_KEY}__commit_meta`;
 let charMenuRafId=null;
 let removeCharMenuAutoPosition=null;
 let dataVersion=(dataScriptEl&&dataScriptEl.getAttribute('data-version'))||window.AL_DATA_VERSION||'';
 window.AL_DATA_VERSION=dataVersion;
+let dataCommit=window.AL_DATA_COMMIT||'';
+if(!dataCommit&&isLikelyGitObjectId(dataVersion)){
+  dataCommit=dataVersion;
+}
+window.AL_DATA_COMMIT=isLikelyGitObjectId(dataCommit)?dataCommit:'';
+let dataCommitMeta=(window.AL_DATA_COMMIT_META&&typeof window.AL_DATA_COMMIT_META==='object')?{...window.AL_DATA_COMMIT_META}:null;
+if(!dataCommitMeta||dataCommitMeta.commit!==window.AL_DATA_COMMIT){
+  dataCommitMeta=null;
+}
+window.AL_DATA_COMMIT_META=dataCommitMeta;
 let dataCacheBust=(dataScriptEl&&dataScriptEl.getAttribute('data-cache-bust'))||window.AL_DATA_CACHE_BUST||'';
 window.AL_DATA_CACHE_BUST=dataCacheBust;
 const DATA_DRAFT_STORAGE_KEY='al_logs_data_draft_v1';
@@ -4129,7 +4221,15 @@ function saveDataJs(options={}){
       }
       const commitSha=(body&&typeof body==='object'&&body.commit)?String(body.commit):null;
       const rawDataUrl=(body&&typeof body==='object'&&body.rawUrl)?String(body.rawUrl):null;
+      const proxyDataUrl=(body&&typeof body==='object'&&body.proxyUrl)?String(body.proxyUrl):null;
       const versionForSave=commitSha||String(Date.now());
+      const commitMetadata=commitSha?{
+        commit:commitSha,
+        rawUrl:rawDataUrl||null,
+        proxyUrl:proxyDataUrl||null,
+        path:DATA_FILE_FALLBACK_PATH,
+        savedAt:Date.now()
+      }:null;
       let refreshOutcome=null;
       let refreshError=null;
       try{
@@ -4140,7 +4240,9 @@ function saveDataJs(options={}){
           backoffFactor:2,
           maxRetryDelay:8000,
           version:versionForSave,
-          rawUrl:rawDataUrl
+          rawUrl:rawDataUrl,
+          proxyUrl:proxyDataUrl,
+          commitMetadata
         });
       }catch(err){
         refreshError=err;
@@ -4291,6 +4393,14 @@ function buildDataUrl(version,{cacheBustToken=null,includeRef=false}={}){
   return DATA_FILE_PATH;
 }
 
+function buildFallbackDataUrl({cacheBustToken=null}={}){
+  const cbToken=cacheBustToken==null?'':String(cacheBustToken||'').trim();
+  if(cbToken){
+    return `${DATA_FILE_FALLBACK_PATH}?cb=${encodeURIComponent(cbToken)}`;
+  }
+  return DATA_FILE_FALLBACK_PATH;
+}
+
 function getDataMetaGeneratedTimestamp(){
   if(!DATA||typeof DATA!=='object') return '';
   const meta=DATA.meta;
@@ -4323,7 +4433,56 @@ function buildPersistedDataVersionValue(version){
   return normalized;
 }
 
-function persistDataVersion(version){
+function persistCommitMetadata(metadata){
+  const normalized=metadata&&typeof metadata==='object'?{...metadata}:null;
+  let serialized='';
+  if(normalized&&normalized.commit&&isLikelyGitObjectId(normalized.commit)){
+    const toPersist={ commit:normalized.commit };
+    if(normalized.rawUrl&&typeof normalized.rawUrl==='string'&&normalized.rawUrl.trim()){
+      toPersist.rawUrl=normalized.rawUrl.trim();
+    }
+    if(normalized.proxyUrl&&typeof normalized.proxyUrl==='string'&&normalized.proxyUrl.trim()){
+      toPersist.proxyUrl=normalized.proxyUrl.trim();
+    }
+    if(normalized.path&&typeof normalized.path==='string'&&normalized.path.trim()){
+      toPersist.path=normalized.path.trim();
+    }
+    if(Number.isFinite(normalized.savedAt)){
+      toPersist.savedAt=Number(normalized.savedAt);
+    }else{
+      toPersist.savedAt=Date.now();
+    }
+    serialized='';
+    try{
+      serialized=JSON.stringify(toPersist);
+    }catch(err){
+      serialized='';
+    }
+  }
+  try{
+    if(serialized){
+      localStorage.setItem(DATA_COMMIT_META_KEY, serialized);
+    }else{
+      localStorage.removeItem(DATA_COMMIT_META_KEY);
+    }
+  }catch(err){
+    /* no-op */
+  }
+  try{
+    if(serialized){
+      sessionStorage.setItem(DATA_COMMIT_META_KEY, serialized);
+    }else{
+      sessionStorage.removeItem(DATA_COMMIT_META_KEY);
+    }
+  }catch(err){
+    /* no-op */
+  }
+  dataCommitMeta=normalized&&normalized.commit?{...normalized}:null;
+  window.AL_DATA_COMMIT_META=dataCommitMeta;
+}
+
+function persistDataVersion(version,{commit=null,commitMetadata=null}={}){
+  const normalizedCommit=commit&&isLikelyGitObjectId(commit)?commit:'';
   try{
     if(version){
       localStorage.setItem(DATA_VERSION_KEY, version);
@@ -4342,13 +4501,52 @@ function persistDataVersion(version){
   }catch(err){
     /* no-op */
   }
+  try{
+    if(normalizedCommit){
+      localStorage.setItem(DATA_COMMIT_KEY, normalizedCommit);
+    }else{
+      localStorage.removeItem(DATA_COMMIT_KEY);
+    }
+  }catch(err){
+    /* no-op */
+  }
+  try{
+    if(normalizedCommit){
+      sessionStorage.setItem(DATA_COMMIT_KEY, normalizedCommit);
+    }else{
+      sessionStorage.removeItem(DATA_COMMIT_KEY);
+    }
+  }catch(err){
+    /* no-op */
+  }
+  if(normalizedCommit){
+    const metadataToPersist=normalizeCommitMetadata(commitMetadata,{ commitFallback:normalizedCommit })
+      || (dataCommitMeta&&dataCommitMeta.commit===normalizedCommit?dataCommitMeta:null)
+      || { commit: normalizedCommit };
+    persistCommitMetadata(metadataToPersist);
+  }else{
+    persistCommitMetadata(null);
+  }
 }
 
-function setDataVersion(version,{persistedValue}={}){
+function setDataVersion(version,{persistedValue,commitMetadata}={}){
   dataVersion=version||'';
   window.AL_DATA_VERSION=dataVersion;
+  const commitForStorage=isLikelyGitObjectId(dataVersion)?dataVersion:'';
+  window.AL_DATA_COMMIT=commitForStorage;
+  if(commitForStorage){
+    const normalizedMeta=normalizeCommitMetadata(commitMetadata,{ commitFallback:commitForStorage });
+    if(normalizedMeta){
+      dataCommitMeta={...normalizedMeta};
+      window.AL_DATA_COMMIT_META=dataCommitMeta;
+    }
+  }else{
+    dataCommitMeta=null;
+    window.AL_DATA_COMMIT_META=null;
+  }
   const storageValue=(persistedValue!==undefined)?persistedValue:buildPersistedDataVersionValue(dataVersion);
-  persistDataVersion(storageValue);
+  window.AL_DATA_STORED_VERSION=storageValue||'';
+  persistDataVersion(storageValue,{ commit:commitForStorage, commitMetadata:dataCommitMeta });
   if(dataScriptEl){
     dataCacheBust=String(Date.now());
     window.AL_DATA_CACHE_BUST=dataCacheBust;
@@ -4448,18 +4646,31 @@ async function fetchDataJsFromUrl(url,{ expectedDataJs=null }={}){
   return text;
 }
 
-async function refreshDataAfterSave({ expectedDataJs=null, retries=0, retryDelay=500, backoffFactor=1.5, maxRetryDelay=5000, version=null, rawUrl=null }={}){
+async function refreshDataAfterSave({ expectedDataJs=null, retries=0, retryDelay=500, backoffFactor=1.5, maxRetryDelay=5000, version=null, rawUrl=null, proxyUrl=null, commitMetadata=null }={}){
   const normalizedRetries=Math.max(0, Number.isFinite(Number(retries))?Number(retries):0);
   const normalizedDelay=Math.max(100, Number.isFinite(Number(retryDelay))?Number(retryDelay):500);
   const normalizedBackoff=Number(backoffFactor)&&Number(backoffFactor)>0?Number(backoffFactor):1.5;
   const normalizedMaxDelay=Math.max(normalizedDelay, Number.isFinite(Number(maxRetryDelay))?Number(maxRetryDelay):5000);
   const pinnedVersion=version&&isLikelyGitObjectId(version)?String(version):null;
+  const normalizedCommitMeta=pinnedVersion?normalizeCommitMetadata(commitMetadata,{ commitFallback:pinnedVersion }):null;
+  if(proxyUrl){
+    try{
+      const text=await fetchDataJsFromUrl(proxyUrl,{ expectedDataJs });
+      applyDataJs(text);
+      if(version!=null){
+        setDataVersion(version,{ commitMetadata:normalizedCommitMeta||{ commit:pinnedVersion, proxyUrl, rawUrl } });
+      }
+      return { status:'confirmed', source:'proxy' };
+    }catch(err){
+      console.warn('Immediate data/data.js fetch via proxy after save failed; falling back to alternate sources.',err);
+    }
+  }
   if(rawUrl){
     try{
       const text=await fetchDataJsFromUrl(rawUrl,{ expectedDataJs });
       applyDataJs(text);
       if(version!=null){
-        setDataVersion(version);
+        setDataVersion(version,{ commitMetadata:normalizedCommitMeta||{ commit:pinnedVersion||version, rawUrl, proxyUrl } });
       }
       return { status:'confirmed', source:'raw' };
     }catch(err){
@@ -4473,7 +4684,8 @@ async function refreshDataAfterSave({ expectedDataJs=null, retries=0, retryDelay
       retryDelay:normalizedDelay,
       backoffFactor:normalizedBackoff,
       maxRetryDelay:normalizedMaxDelay,
-      version
+      version,
+      commitMetadata:normalizedCommitMeta||(pinnedVersion?{ commit:pinnedVersion, rawUrl, proxyUrl }:null)
     });
   }catch(err){
     if(pinnedVersion){
@@ -4485,7 +4697,8 @@ async function refreshDataAfterSave({ expectedDataJs=null, retries=0, retryDelay
           retryDelay:normalizedDelay,
           backoffFactor:normalizedBackoff,
           maxRetryDelay:normalizedMaxDelay,
-          version:null
+          version:null,
+          commitMetadata:null
         });
         return { status:'stale', fallback:'branch', error:err };
       }catch(fallbackError){
@@ -4508,7 +4721,7 @@ function computeBackoffDelay(attempt,{ initialDelay, factor, maxDelay }){
   return Math.max(100, Math.round(clamped));
 }
 
-async function refreshDataJsCache({ expectedDataJs=null, retries=0, retryDelay=500, backoffFactor=1.5, maxRetryDelay=5000, version=null }={}){
+async function refreshDataJsCache({ expectedDataJs=null, retries=0, retryDelay=500, backoffFactor=1.5, maxRetryDelay=5000, version=null, allowRelativeFallback=true, commitMetadata=null }={}){
   let attempt=0;
   const maxAttempts=Math.max(0, Number.isFinite(Number(retries))?Number(retries):0);
   const pinnedVersion=version?String(version):null;
@@ -4516,6 +4729,8 @@ async function refreshDataJsCache({ expectedDataJs=null, retries=0, retryDelay=5
   const factor=Number(backoffFactor)&&Number(backoffFactor)>0?Number(backoffFactor):1.5;
   const capDelay=Math.max(baseDelay, Number.isFinite(Number(maxRetryDelay))?Number(maxRetryDelay):5000);
   let lastError=null;
+  let attemptedRelativeFallback=false;
+  const normalizedCommitMeta=pinnedVersion&&isLikelyGitObjectId(pinnedVersion)?normalizeCommitMetadata(commitMetadata,{ commitFallback:pinnedVersion }):null;
   while(attempt<=maxAttempts){
     const versionToUse=pinnedVersion||String(Date.now());
     try{
@@ -4531,12 +4746,27 @@ async function refreshDataJsCache({ expectedDataJs=null, retries=0, retryDelay=5
       const text=await response.text();
       if(!expectedDataJs || dataPayloadsMatch(text, expectedDataJs)){
         applyDataJs(text);
-        setDataVersion(versionToUse);
+        const metaForPersist=pinnedVersion&&isLikelyGitObjectId(pinnedVersion)?normalizedCommitMeta:null;
+        setDataVersion(versionToUse,{ commitMetadata:metaForPersist });
         return { status:'confirmed', source:pinnedVersion?'ref':'branch', attempts:attempt+1 };
       }
       lastError=new Error('Latest data/data.js did not match the newly saved content.');
     }catch(err){
       lastError=err;
+      if(!pinnedVersion && allowRelativeFallback && !attemptedRelativeFallback){
+        attemptedRelativeFallback=true;
+        try{
+          const fallbackText=await fetchDataJsFromUrl(buildFallbackDataUrl({cacheBustToken:Date.now()}),{ expectedDataJs });
+          if(!expectedDataJs || dataPayloadsMatch(fallbackText, expectedDataJs)){
+            applyDataJs(fallbackText);
+            setDataVersion(versionToUse,{ commitMetadata:null });
+            return { status:'confirmed', source:'relative', attempts:attempt+1, fallback:'static' };
+          }
+          lastError=new Error('Latest data/data.js did not match the newly saved content.');
+        }catch(fallbackError){
+          lastError=fallbackError;
+        }
+      }
     }
     if(attempt===maxAttempts){
       if(lastError){
