Stop fetching DMsGuild data for downtime activities

--- a/index.html
+++ b/index.html
@@ -254,6 +254,21 @@ h1{margin:0;font-size:28px;line-height:1.05;font-weight:800;letter-spacing:-0.01
 .log-list .card.open::before{box-shadow:none;opacity:0;border-radius:0}
 .log-list .card.editing::before{box-shadow:inset 3px 0 0 #eef1f7;opacity:1}
 .log-list .card .card-hd{padding:8px 18px;display:flex;align-items:flex-start;gap:14px;min-height:0;border-bottom:1px solid transparent;transition:background var(--dur) var(--ease),border-radius var(--dur) var(--ease),color var(--dur) var(--ease),border-color var(--dur) var(--ease),box-shadow var(--dur) var(--ease)}
+.dmsguild-thumb{width:64px;height:64px;border-radius:12px;overflow:hidden;background:#e2e8f0;display:none;align-items:center;justify-content:center;flex:0 0 auto;box-shadow:inset 0 0 0 1px rgba(15,23,42,.06)}
+.card.has-dmsguild .dmsguild-thumb{display:flex}
+.dmsguild-thumb img{width:100%;height:100%;object-fit:cover;display:block}
+.dmsguild-art{margin:0 0 16px;border-radius:16px;overflow:hidden;background:#f1f5f9;display:none}
+.card.has-dmsguild .dmsguild-art{display:block}
+.dmsguild-art img{width:100%;height:auto;display:block}
+.dmsguild-meta{display:none;flex-wrap:wrap;gap:16px;align-items:flex-start;margin:0 0 16px}
+.card.has-dmsguild .dmsguild-meta{display:flex}
+.dmsguild-meta-list{margin:0;padding:0;display:grid;grid-template-columns:repeat(auto-fit,minmax(160px,1fr));gap:12px;flex:1 1 220px}
+.dmsguild-meta-list dt{margin:0;font-size:11px;font-weight:700;letter-spacing:.08em;text-transform:uppercase;color:var(--muted)}
+.dmsguild-meta-list dd{margin:2px 0 0;font-weight:600;font-size:14px}
+.dmsguild-meta-link{flex:0 0 auto;align-self:flex-end;font-size:13px;font-weight:600;color:var(--primary);text-decoration:none}
+.dmsguild-meta-link:hover,.dmsguild-meta-link:focus-visible{text-decoration:underline;outline:none}
+.card.dmsguild-loading .dmsguild-thumb{background:linear-gradient(90deg,rgba(226,232,240,.6) 0%,rgba(203,213,225,.8) 50%,rgba(226,232,240,.6) 100%);background-size:200% 100%;animation:dmsguildPulse 1.2s ease-in-out infinite}
+@keyframes dmsguildPulse{0%{background-position:200% 0;}100%{background-position:0 0;}}
 .log-list .card .card-hd .card-tools{margin-left:auto;display:flex;align-items:center;gap:8px}
 .log-list .card-bd{border-top:1px solid rgba(148,163,184,.28);padding:0 20px;background:rgba(248,250,252,.85);transition:background-color var(--dur) var(--ease),background var(--dur) var(--ease),border-color var(--dur) var(--ease),color var(--dur) var(--ease)}
 .log-list .card.open .card-bd{border-radius:0;background:transparent;border-color:rgba(148,163,184,.2)}
@@ -11222,6 +11237,234 @@ function openSupernaturalModal(charKey){
   refreshModalState();
 }
 
+const DMSGUILD_LOOKUP_ENDPOINT='/api/dmsguild-search';
+const DMSGUILD_LOOKUP_CACHE=new Map();
+
+function normalizeDmsguildLookupValue(value){
+  if(value==null) return '';
+  return String(value).trim();
+}
+
+function buildDmsguildLookupKey(code,title){
+  const normalizedCode=normalizeDmsguildLookupValue(code).toLowerCase();
+  const normalizedTitle=normalizeDmsguildLookupValue(title).toLowerCase();
+  if(!normalizedCode && !normalizedTitle) return '';
+  return `${normalizedCode}__${normalizedTitle}`;
+}
+
+async function fetchDmsguildMetadata(code,title){
+  const key=buildDmsguildLookupKey(code,title);
+  if(!key) return null;
+  if(DMSGUILD_LOOKUP_CACHE.has(key)){
+    return DMSGUILD_LOOKUP_CACHE.get(key);
+  }
+  const params=new URLSearchParams();
+  if(code) params.set('code', code);
+  if(title) params.set('title', title);
+  const request=fetch(`${DMSGUILD_LOOKUP_ENDPOINT}?${params.toString()}`,{
+    headers:{ accept:'application/json' }
+  })
+    .then(res=>{
+      if(res.status===404){
+        return null;
+      }
+      if(!res.ok){
+        throw new Error(`Dungeon Masters Guild lookup failed (${res.status})`);
+      }
+      return res.json();
+    })
+    .then(payload=>{
+      if(!payload || typeof payload!=='object') return null;
+      if(payload.data && typeof payload.data==='object'){
+        return payload.data;
+      }
+      return payload;
+    })
+    .catch(err=>{
+      console.warn('Failed to load Dungeon Masters Guild metadata', err);
+      return null;
+    });
+  DMSGUILD_LOOKUP_CACHE.set(key,request);
+  return request;
+}
+
+function applyDmsguildMetadata(card,data){
+  if(!card) return;
+  const ui=card.__dmsguildUi||null;
+  if(!ui){
+    return;
+  }
+  const resetUi=()=>{
+    card.classList.remove('has-dmsguild');
+    if(ui.thumbWrap){
+      ui.thumbWrap.hidden=true;
+      if(ui.thumbImg){
+        ui.thumbImg.removeAttribute('src');
+        ui.thumbImg.alt='';
+      }
+    }
+    if(ui.artWrap){
+      ui.artWrap.hidden=true;
+      if(ui.artImg){
+        ui.artImg.removeAttribute('src');
+        ui.artImg.alt='';
+      }
+    }
+    if(ui.metaList){
+      ui.metaList.innerHTML='';
+    }
+    if(ui.metaWrap){
+      ui.metaWrap.hidden=true;
+    }
+    if(ui.metaLink){
+      ui.metaLink.hidden=true;
+      ui.metaLink.removeAttribute('href');
+    }
+  };
+
+  if(!data){
+    resetUi();
+    return;
+  }
+
+  resetUi();
+
+  const titleText=normalizeDmsguildLookupValue(data.title);
+  const thumbSrc=normalizeDmsguildLookupValue(data.thumbnail);
+  const imageSrc=normalizeDmsguildLookupValue(data.image)||thumbSrc;
+  const authorText=normalizeDmsguildLookupValue(data.author);
+  const publishedRaw=normalizeDmsguildLookupValue(data.publicationDate);
+  const ratingValue=Number(data.rating);
+  const ratingCount=Number(data.ratingCount);
+  const linkUrl=normalizeDmsguildLookupValue(data.url);
+
+  const hasVisual=Boolean(thumbSrc||imageSrc);
+  const hasAuthor=Boolean(authorText);
+  const hasPublication=Boolean(publishedRaw);
+  const hasRating=(Number.isFinite(ratingValue)&&ratingValue>0)||(Number.isFinite(ratingCount)&&ratingCount>0);
+  const hasLink=Boolean(linkUrl);
+  const shouldDisplay=hasVisual||hasAuthor||hasPublication||hasRating||hasLink;
+
+  if(!shouldDisplay){
+    return;
+  }
+
+  card.classList.add('has-dmsguild');
+
+  if(ui.thumbImg){
+    if(thumbSrc||imageSrc){
+      const src=thumbSrc||imageSrc;
+      ui.thumbImg.src=src;
+      ui.thumbImg.alt=titleText?`${titleText} cover art`:'Adventure cover art';
+      if(ui.thumbWrap){ ui.thumbWrap.hidden=false; }
+    }
+  }
+
+  if(ui.artImg){
+    if(imageSrc){
+      ui.artImg.src=imageSrc;
+      ui.artImg.alt=titleText?`${titleText} cover art`:'Adventure cover art';
+      if(ui.artWrap){ ui.artWrap.hidden=false; }
+    }
+  }
+
+  let hasMeta=false;
+  if(ui.metaList){
+    const appendMeta=(label,value)=>{
+      if(!value) return;
+      const dt=document.createElement('dt');
+      dt.textContent=label;
+      const dd=document.createElement('dd');
+      dd.textContent=value;
+      ui.metaList.append(dt,dd);
+      hasMeta=true;
+    };
+
+    appendMeta('Author', authorText);
+
+    if(publishedRaw){
+      appendMeta('Published', fmtDate(publishedRaw));
+    }
+
+    if(Number.isFinite(ratingValue) && ratingValue>0){
+      const rounded=Math.round(ratingValue*10)/10;
+      const ratingFormatted=(Math.abs(Math.round(rounded)-rounded)<0.001)
+        ? fmtNumber(Math.round(rounded))
+        : rounded.toFixed(1);
+      let ratingLabel=`${ratingFormatted} / 5`;
+      if(Number.isFinite(ratingCount) && ratingCount>0){
+        const plural=ratingCount===1?'rating':'ratings';
+        ratingLabel+=` • ${fmtNumber(ratingCount)} ${plural}`;
+      }
+      appendMeta('Rating', ratingLabel);
+    }else if(Number.isFinite(ratingCount) && ratingCount>0){
+      const plural=ratingCount===1?'rating':'ratings';
+      appendMeta('Ratings', `${fmtNumber(ratingCount)} ${plural}`);
+    }
+  }
+
+  if(ui.metaLink){
+    if(linkUrl){
+      ui.metaLink.href=linkUrl;
+      ui.metaLink.hidden=false;
+    }else{
+      ui.metaLink.hidden=true;
+      ui.metaLink.removeAttribute('href');
+    }
+  }
+
+  if(ui.metaWrap){
+    const shouldShowMeta=(hasMeta || (ui.metaLink && !ui.metaLink.hidden));
+    ui.metaWrap.hidden=!shouldShowMeta;
+  }
+}
+
+function requestDmsguildMetadata(card,{code,title}={}){
+  if(!card) return;
+  const normalizedCode=normalizeDmsguildLookupValue(code);
+  const normalizedTitle=normalizeDmsguildLookupValue(title);
+  const key=buildDmsguildLookupKey(normalizedCode,normalizedTitle);
+  if(!key){
+    card.__dmsguildFetchedKey='';
+    card.__dmsguildPendingKey=null;
+    card.__dmsguildData=null;
+    applyDmsguildMetadata(card,null);
+    return;
+  }
+  if(card.__dmsguildPendingKey===key){
+    return;
+  }
+  if(card.__dmsguildFetchedKey===key){
+    applyDmsguildMetadata(card,card.__dmsguildData||null);
+    return;
+  }
+  card.__dmsguildPendingKey=key;
+  card.classList.add('dmsguild-loading');
+  fetchDmsguildMetadata(normalizedCode,normalizedTitle)
+    .then(data=>{
+      if(card.__dmsguildPendingKey!==key && card.__dmsguildFetchedKey!==key){
+        return;
+      }
+      card.__dmsguildFetchedKey=key;
+      card.__dmsguildData=data;
+      applyDmsguildMetadata(card,data);
+    })
+    .catch(err=>{
+      console.warn('Unable to apply Dungeon Masters Guild metadata', err);
+      if(card.__dmsguildPendingKey===key){
+        card.__dmsguildFetchedKey=key;
+        card.__dmsguildData=null;
+        applyDmsguildMetadata(card,null);
+      }
+    })
+    .finally(()=>{
+      if(card.__dmsguildPendingKey===key){
+        card.__dmsguildPendingKey=null;
+        card.classList.remove('dmsguild-loading');
+      }
+    });
+}
+
 /* --- cards --- */
 function makeCard(a,idx){
   const act=isActivityEntry(a); const {gp,dtd}=netVals(a);
@@ -11237,6 +11480,14 @@ function makeCard(a,idx){
   const dmLinkMeta=(DM_REWARD_LINKS && DM_REWARD_LINKS.get(a))||null;
 
   const hd=document.createElement('div'); hd.className='card-hd';
+  const dmsguildThumb=document.createElement('div');
+  dmsguildThumb.className='dmsguild-thumb';
+  dmsguildThumb.hidden=true;
+  const dmsguildThumbImg=document.createElement('img');
+  dmsguildThumbImg.alt='';
+  dmsguildThumbImg.decoding='async';
+  dmsguildThumbImg.loading='lazy';
+  dmsguildThumb.appendChild(dmsguildThumbImg);
   const main=document.createElement('div'); main.className='log-row';
   const info=document.createElement('div'); info.className='log-row-info';
   const tagRow=document.createElement('div'); tagRow.className='log-row-tags';
@@ -11387,8 +11638,17 @@ function makeCard(a,idx){
     return tag;
   };
 
+  const clearDmsguildState=()=>{
+    card.__dmsguildFetchedKey='';
+    card.__dmsguildPendingKey=null;
+    card.__dmsguildData=null;
+    card.classList.remove('dmsguild-loading');
+    applyDmsguildMetadata(card,null);
+  };
+
   const applyActivityBadge=(isActivity)=>{
     if(isActivity){
+      clearDmsguildState();
       if(!downtimeTag){
         downtimeTag=ensureTag('Downtime','tag-downtime');
       }
@@ -11480,7 +11740,7 @@ function makeCard(a,idx){
 
   nameDisplay.textContent=fullTitle;
   nameDisplay.removeAttribute('title');
-  hd.appendChild(main);
+  hd.append(dmsguildThumb,main);
 
   bindScrollableObserver(nameSpan);
   bindScrollableObserver(dateSpan);
@@ -11523,6 +11783,29 @@ function makeCard(a,idx){
   cardActions.appendChild(editBtn);
   const view=document.createElement('div'); view.className='bd-in';
   view.innerHTML='';
+  const dmsguildArt=document.createElement('figure');
+  dmsguildArt.className='dmsguild-art';
+  dmsguildArt.hidden=true;
+  const dmsguildArtImg=document.createElement('img');
+  dmsguildArtImg.alt='';
+  dmsguildArtImg.decoding='async';
+  dmsguildArtImg.loading='lazy';
+  dmsguildArt.appendChild(dmsguildArtImg);
+  view.appendChild(dmsguildArt);
+  const dmsguildMeta=document.createElement('div');
+  dmsguildMeta.className='dmsguild-meta';
+  dmsguildMeta.hidden=true;
+  const dmsguildMetaList=document.createElement('dl');
+  dmsguildMetaList.className='dmsguild-meta-list';
+  dmsguildMeta.appendChild(dmsguildMetaList);
+  const dmsguildMetaLink=document.createElement('a');
+  dmsguildMetaLink.className='dmsguild-meta-link';
+  dmsguildMetaLink.target='_blank';
+  dmsguildMetaLink.rel='noopener noreferrer';
+  dmsguildMetaLink.textContent='View on Dungeon Masters Guild';
+  dmsguildMetaLink.hidden=true;
+  dmsguildMeta.appendChild(dmsguildMetaLink);
+  view.appendChild(dmsguildMeta);
 
   const createSection=(title,options={})=>{
     const {collapsible=false,startOpen=false}=options;
@@ -11590,6 +11873,26 @@ function makeCard(a,idx){
   overviewContent.className='card-overview card-section-content card-section-content--grid';
   overviewContent.style.display='none';
   view.appendChild(overviewContent);
+  card.__dmsguildUi={
+    thumbWrap:dmsguildThumb,
+    thumbImg:dmsguildThumbImg,
+    artWrap:dmsguildArt,
+    artImg:dmsguildArtImg,
+    metaWrap:dmsguildMeta,
+    metaList:dmsguildMetaList,
+    metaLink:dmsguildMetaLink
+  };
+  const runDmsguildLookup=()=>{
+    const source=card.__dataRef||a||{};
+    if(isActivityEntry(source) || card.classList.contains('activity')){
+      clearDmsguildState();
+      return;
+    }
+    requestDmsguildMetadata(card,{
+      code:source && source.code!=null?source.code:'',
+      title:source && source.title!=null?source.title:''
+    });
+  };
   const rewardsSection=createSection('Rewards & Progress');
   const rewardsContent=rewardsSection.content;
   const inventorySectionLabel='Magic & Consumables';
@@ -12305,6 +12608,10 @@ function makeCard(a,idx){
       return true;
     });
     overviewContent.style.display=(editing || hasOverviewContent)?'':'none';
+
+    if(!editing){
+      runDmsguildLookup();
+    }
 
     updateHeaderMeta();
 
